# CPyD-Project

./: .gitignore  CMakeLists.txt  README.md  host.txt  main.cpp  nodo_esclavo  simulador_votacion  test_mpi  test_mpi.cpp
DASHBOARD_VOTACION/: app.py  app_v0.py  requirements.txt
DASHBOARD_VOTACION/templates/: contenido.html  dashboard.html  help.html  index.html  iniciar_sesion.html  registarse.html
DATA/: votos_simulados_region1.csv
SCRIPTS/: generador_votos.py  generador_votos_region1.py  regiones.py
VOTACION/balanceo/: balanceo_carga.cpp  balanceo_carga.hpp  balanceo_carga_test.cpp  estado_balanceo.cpp  estado_balanceo.hpp
VOTACION/common/: config.cpp  config.hpp  estructura_votos.hpp
VOTACION/deteccion/: detectar_anomalias.cpp  detectar_anomalias.cu  detectar_anomalias.hpp  detectar_anomalias_cuda.hpp  test_anomalias  test_anomalias.cpp
VOTACION/esclavo/: nodo_esclavo.cpp  nodo_esclavo.hpp  simulador
VOTACION/estadisticas/: estadisticas.cpp  estadisticas.hpp  web_stats_sender.cpp  web_stats_sender.hpp
VOTACION/maestro/: main_maestro.cpp  nodo_maestro.cpp  nodo_maestro.hpp
VOTACION/procesamiento/: procesar_lote.cpp  procesar_lote.hpp
VOTACION/protocolo/: protocolo.cpp  protocolo.hpp
VOTACION/rendimiento/: rendimiento.cpp  (+1 more)
tests/: test_anomalias  test_anomalias.cpp  test_anomalias_cu  test_balanceo_carga  test_balanceo_carga.cpp  test_estadisticas  test_estadisticas.cpp  test_nodo_esclavo  test_nodo_esclavo.cpp  test_procesar_lote  test_procesar_lote.cpp  test_protocolo  test_protocolo.cpp  test_simulacion_llegada  test_simulacion_llegada.cpp
(+5 files in other folders)
